2004-04-05, version 0.4-7: 
	Update to require R-1.8.1 and remove the requirement for the 
	serialise package (build into R-1.8.1).
	Some minor bugs fix.  
	Add #ifdef MPI2 to src/Rmpi.c and change MPI_Comm_set_errhandler 
	back to MPI_Errhandler_set for backward compatibility with 
	MPI-1.2, suggested by Ross Boylan. 
	Add -DMPI2 in configure.in in case lam lib is detected. Otherwise
	MPI-2 related functions will be disabled.
	Add detect MPI in /usr/lib/mpi or /usr/lib/mpich, hopefully to 
	catch MPICH MPI. 
2003-09-24, version 0.4-6:
	Add some lines to configure.in so that configure can detect 
	lam on Debian Linux. Thanks to Kurt Hornik 
	<Kurt.Hornik@wu-wien.ac.at> for Debian instructions.

2003-02-03, version 0.4-5: internal use.

2002-06-01, version 0.4-4:
	Add a function string for creating a (binary) character buffer.  
	Remove all C++ style comments.
	Remove all deprecated functions.
	Remove mpi.barrier from slavedaemon.R (it causes slaves hanging if 
	master crashed)

2002-05-06, version 0.4-3:

	Take SPRNG out. Use rsprng package instead. Use mpi.init.sprng to 
	start SPRNG.

	Require serialize package

   	mpi.send.Robj, mpi.recv.Robj, mpi.bcast.Robj, and 
	mpi.bcast.Robj2slave use serialize to transfer R objects.

        mpi.bcast.send and mpi.bcast.recv are deprecated.

  	mpi.bcast.send.cmd and mpi.bcast.recv.cmd are replaced by mpi.bcast.cmd

	mpi.bcast.send.Robj and mpi.bcast.recv.Robj are replaced by 
	mpi.bcast.Robj

	New instructions for installing Rmpi for other MPI 
	implementations. 

	Thanks to Kurt Hornik <Kurt.Hornik@wu-wien.ac.at> for 
	Debian instructions.

2002-05-02, version 0.4.2: 
	Some bugs fix. 
	Add Rprofile in inst
	Add a function mpi.comm.dup

2002-04-29, version 0.4.1: 
	Some bugs fix
	Add a function mpi.quit

2002-04-26, version 0.4.0: 
	Initial public release