@@ -19,7 +19,7 @@ in one working directory).
 \usage{
 mpi.spawn.Rslaves(Rscript=system.file("slavedaemon.R", package="Rmpi"),
         nslaves=mpi.universe.size(), root = 0, intercomm = 2,
-        comm = 1, hosts = NULL, needlog = TRUE))
+        comm = 1, hosts = NULL, needlog = TRUE, needsprng = TRUE))
 
 mpi.close.Rslaves(dellog = TRUE, comm = 1)
 tailslave.log(nlines = 3, comm = 1)
@@ -34,6 +34,8 @@ tailslave.log(nlines = 3, comm = 1)
 spawned.}
   \item{needlog}{a logical. If TRUE, R BATCH outputs will be saved in log files.  
   If FALSE, the outputs will send to /dev/null.}
+  \item{needsprng}{a logical. If TRUE and the package \pkg{rsprng} is 
+installed on both master and slaves, SPRNG will be initialized.}  
   \item{dellog}{a logical specifying if R slave's log files are deleted or 
 not.}
   \item{nlines}{number of lines to view from tail in R slave's log files.}
